Archive2/94/685818856831e5/output
main.cpp:8:1: error: static assertion failed: destructor should not matter, should it?
 static_assert(std::is_nothrow_constructible<bad>(), "destructor should not matter, should it?");
 ^
bash: line 7: ./a.out: No such file or directory
